# dbt-mdl

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  wren-dbt-converter-plan.md
docs/: architecture.md  comparison.md
src/dbt_graphql/: __init__.py  cli.py  pipeline.py
src/dbt_graphql/compiler/: __init__.py  query.py
src/dbt_graphql/dbt/processors/: constraints.py  relationships.py  tests_preprocessor.py
src/dbt_graphql/formatter/: __init__.py  graphql.py  schema.py
src/dbt_graphql/ir/: __init__.py  models.py
src/dbt_graphql/mcp/: __init__.py  discovery.py  server.py
src/dbt_graphql/serve/: __init__.py  app.py  resolvers.py
src/dbt_mdl/: cli.py
src/dbt_mdl/graphjin/: formatter.py
src/dbt_mdl/wren/codegen/: mdl.py
src/wren_dbt_converter/: __init__.py  cli.py  converter.py
src/wren_dbt_converter/models/: __init__.py  mdl.py  wrapper.py
src/wren_dbt_converter/processors/: columns.py  constraints.py  relationships.py  tests_preprocessor.py
tests/: test_converter.py  test_data_source.py  test_relationships.py
tests/graphjin/: test_formatter.py
tests/integration/: test_cli.py  test_integration.py  test_serve.py
tests/unit/: test_artifacts.py  test_constraints.py  test_discovery.py  test_formatter.py  test_lineage.py  test_mcp_server.py  test_pipeline.py  test_relationships.py  test_schema.py  test_tests_preprocessor.py
