[project]
name = "dbt-mdl"
version = "0.1.0"
description = "Convert dbt project to Modeling Definition Language"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "dbt-artifacts-parser>=0.13.0",
    "dbt-colibri>=0.3.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
dbt-mdl = "dbt_mdl.cli:main"

[dependency-groups]
test = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]
lint = ["ruff", "ty"]
dev = ["datamodel-code-generator[http]"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.datamodel-codegen]
input-file-type = "jsonschema"
output-model-type = "pydantic_v2.BaseModel"
snake-case-field = "true"
use-type-alias = true
allow-population-by-field-name = "true"
formatters = ["ruff-check", "ruff-format"]
target-python-version = "3.14"
target-pydantic-version = "2.11"
disable-timestamp = true

[tool.datamodel-codegen.profiles.wren-mdl]
url = "https://raw.githubusercontent.com/Canner/WrenAI/main/wren-mdl/mdl.schema.json"
output = "src/dbt_mdl/wren/codegen/mdl.py"

[tool.pytest]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
